@@ -467,65 +467,4 @@ public class FedoraObjectRelations
     }
 
 
-    private String findPropertiesPid( String sourcePid, TargetFields property_1, String value_1, TargetFields property_2, String value_2 )
-    {
-        String[] resultFields = { property_1.fieldname(), property_2.fieldname() };
-
-        FedoraObjectRepository fedoraObjectRepository = (FedoraObjectRepository) objectRepository;
-        List< Pair< TargetFields, String > > propertiesAndValues = new ArrayList< Pair< TargetFields, String > >();
-
-        propertiesAndValues.add( new Pair< TargetFields, String >( property_1, value_1 ) );
-        propertiesAndValues.add( new Pair< TargetFields, String >( property_2, value_2 ) );
-
-        ObjectFields[] pids = fedoraObjectRepository.searchRepository( resultFields, propertiesAndValues, "has", 10000, null );
-        String retVal = null;
-        
-        for ( ObjectFields field : pids )
-        {
-            retVal = field.getPid();
-            if ( ! sourcePid.equals( retVal ) )
-            {
-                return retVal;
-            }
-        }
-
-        if( retVal == null )
-        {
-            log.warn( String.format( "Found no pids that match the search criterias '%s', '%s'", value_1, value_2 ) );
-        }
-
-        return retVal;
-    }
-
-
-    private String findPropertyPid( String sourcePid, TargetFields property, String value )
-    {
-        String[] resultFields = { property.fieldname() };
-
-        FedoraObjectRepository fedoraObjectRepository = (FedoraObjectRepository) objectRepository;        
-        List< Pair< TargetFields, String > > propertiesAndValues = new ArrayList< Pair< TargetFields, String > >();
-
-        propertiesAndValues.add( new Pair< TargetFields, String >( property, value ) );
-        ObjectFields[] pids = fedoraObjectRepository.searchRepository( resultFields, propertiesAndValues, "has", 100000, null );
-
-        String retval = null;
-        if( pids != null )
-        {
-            String nextPid = null;
-            for( int i = 0; i < pids.length; i++ )
-            {
-                nextPid = pids[i].getPid();
-                if( ! nextPid.equals( sourcePid ) )
-                {
-                    return retval; // = nextPid;
-                }
-            }
-        }
-
-        if ( retval == null )
-        {
-            log.warn( String.format( "no pids matched the search '%s'", value ) );
-        }
-        return retval;
-    }
 }
